frame/support/test/tests/pallet_ui/step_022.stderr
error: Invalid pallet::call, expect no trait ident as in `impl<..> Module<..> { .. }`
  --> $DIR/step_022.rs:15:21
   |
15 |     impl<T: Trait> Foo for Module<T> {}
   |                        ^^^
